overflow issue resolved

--- a/slide-show.css
+++ b/slide-show.css
@@ -7,6 +7,7 @@
     max-width: 1000px;
     position: relative;
     margin: auto;
+    overflow: hidden;
 }
 
 
